# pyCityVisitorParking

./: .gitignore  .ignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  CHANGELOG.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: release-drafter.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release-drafter.yml  release.yml
docs/: RELEASING.md
docs/provider-development/: README.md
docs/provider-template/: CHANGELOG.md  README.md  __init__.py  api.py  const.py  manifest.json
scripts/: README.md  dvsportal_live_check.py  provider_live_check.py  sanitize.py
src/pycityvisitorparking/: __init__.py  _version.py  client.py  exceptions.py  models.py  util.py
src/pycityvisitorparking/provider/: AGENTS.md  README.md  base.py  loader.py  manifest.schema.json
src/pycityvisitorparking/provider/amsterdam/: CHANGELOG.md  README.md  __init__.py  api.py  const.py  manifest.json
src/pycityvisitorparking/provider/amsterdam/tests/: test_mapping.py
src/pycityvisitorparking/provider/dvsportal/: AGENTS.md  CHANGELOG.md  README.md  __init__.py  api.py  const.py  manifest.json
src/pycityvisitorparking/provider/dvsportal/tests/: test_mapping.py
src/pycityvisitorparking/provider/the_hague/: AGENTS.md  CHANGELOG.md  README.md  __init__.py  api.py  const.py  manifest.json
src/pycityvisitorparking/provider/the_hague/tests/: test_mapping.py
tests/: test_base_provider.py  test_client.py  test_dvsportal_api.py  test_exceptions.py  test_fallback.py  test_loader.py  test_loader_cache.py  test_manifest_schema.py  test_provider_api.py  test_the_hague_api.py  test_util.py
