[build-system]
requires = ["hatchling>=1.28"]
build-backend = "hatchling.build"

[project]
name = "pycityvisitorparking"
dynamic = ["version"]
description = "Async integration layer between Home Assistant and Dutch municipal visitor parking APIs."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "pyCityVisitorParking contributors" }]
keywords = ["home-assistant", "async", "aiohttp", "parking", "municipality"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Framework :: AsyncIO",
  "Topic :: Home Automation",
]
dependencies = [
  "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
  "hatch",
  "ruff",
  "pyright==1.1.407",
  "pytest",
  "pytest-asyncio",
  "pre-commit",
  "build",
  "twine",
  "jsonschema",
]

[project.urls]
Homepage = "https://github.com/sir-Unknown/pyCityVisitorParking"
Repository = "https://github.com/sir-Unknown/pyCityVisitorParking"
Issues = "https://github.com/sir-Unknown/pyCityVisitorParking/issues"

# ----------------------------
# Hatch build configuration
# ----------------------------
[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pycityvisitorparking"]
include = [
  # Typing marker
  "src/pycityvisitorparking/py.typed",
  # Provider manifests + schema
  "src/pycityvisitorparking/provider/manifest.schema.json",
  "src/pycityvisitorparking/provider/**/manifest.json",
  # Per-provider docs (kept inside the package)
  "src/pycityvisitorparking/provider/**/README.md",
  "src/pycityvisitorparking/provider/**/CHANGELOG.md",
]

[tool.hatch.build.targets.sdist]
include = [
  # Root docs
  "README.md",
  "CHANGELOG.md",
  "AGENTS.md",
  "docs/RELEASING.md",
  # Source
  "src/**",
  # CI / dev tooling (useful in sdist)
  ".github/workflows/*.yml",
  ".devcontainer/devcontainer.json",
  ".vscode/extensions.json",
  ".vscode/settings.json",
]

[tool.hatch.version]
path = "src/pycityvisitorparking/_version.py"

# ----------------------------
# Hatch environments
# ----------------------------
[tool.hatch.envs.lint]
dependencies = ["ruff"]
[tool.hatch.envs.lint.scripts]
check = "ruff check ."
format-check = "ruff format --check ."
fix = "ruff check --fix ."
fmt = "ruff format ."

[tool.hatch.envs.test]
dependencies = ["pytest", "pytest-asyncio", "jsonschema"]
[tool.hatch.envs.test.scripts]
run = "pytest"

[tool.hatch.envs.schema]
dependencies = ["jsonschema", "pytest", "pytest-asyncio"]
[tool.hatch.envs.schema.scripts]
validate = "python -m pytest tests/test_manifest_schema.py"

[tool.hatch.envs.typecheck]
dependencies = ["pyright==1.1.407", "pytest"]
[tool.hatch.envs.typecheck.scripts]
run = "pyright"

# ----------------------------
# Ruff configuration
# ----------------------------
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF"]
ignore = [
  "E501", # let ruff format handle line length
]

# ----------------------------
# Pyright configuration
# ----------------------------
[tool.pyright]
include = ["src"]
extraPaths = ["src"]
pythonVersion = "3.13"
typeCheckingMode = "basic"

# ----------------------------
# Pytest configuration
# ----------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
